Changes log for App-Maisha
==========================

        - added mock skips for plugin tests.

0.20    2014-09-01
        - fixed license fields in META.json to be lists.
        - fixed distribution name in Makefile.PL.
        - extended test suite.
        - clean up method returns.
        - added current year to copyright notice for 'about' command.
        - Test::Effects and Devel::Cover don't work together, so moving new
          run_methods test script to /xt/ directory, and reverting original
          script back to eval tests.
        - added config tests and data.

0.19    2014-05-16
        - added LICENSE file.
        - fixed distribution name in META.
        - META resources update.

0.18    2012-10-14
        - set permissions on secret files (thanks to Colin Newell).
        - added Search API.
        - fixed timeline/list pagination and limits.
        - added reauthorize functionality to allow for the higher permissions
          Maisha needs to access direct messages.

0.17    2012-10-14
        - POD updates ... never liked how POD forces double newlines for
          bullet-point lists. (thanks to Mario Domgoergen).

0.16    2012-10-14
        - spelling fix. (thanks to Florian Schlichting & Gregor Herrmann).
        - added =encoding to POD.
        - reworked Makefile.PL for clarity.
        - License updated to Artistic License v2.0.
        - added minimum perl version (5.006).
        - META tests no longer require specific versions.
        - change file dates changed to meet W3CDTF standards.
        - implemented Perl::Critic suggestions.
        - added login and connection protection.
        - added debug feature for more verbose error messages.
        - added command history storage functionality.
        - fixed repeated network lines with help command.
        - added initial lines to help messages.
        - always use internal pager (RT#61433).
        - extend time/date formats.