@@ -2,6 +2,7 @@ Changes log for App-Maisha
 ==========================
 
         - added mock skips for plugin tests.
+        - added configuration skips if config loaders not installed.
 
 0.20    2014-09-01
         - fixed license fields in META.json to be lists.
